--- a/modules/home/css/TableStyle.done.css
+++ b/modules/home/css/TableStyle.done.css
@@ -1,9 +1,10 @@
 body {
-    background-color: #5C5
+    background-color: #5C5;
 }
 table {
     background-color: #CFC;
     border: 2px solid #444;
+    width: max-content;
 }
 td.panel {
     width: 50px;
@@ -13,5 +14,5 @@ td.panel {
     font-family: "Comic Sans MS", sans-serif;
     font-weight: bold;
     font-size: 24px;
-    color: #0C0
+    color: #0C0;
 }
